# objective-price-project

./: .gitignore  LICENSE  Makefile  README.md  env.sample  pyproject.toml
app/: config.py  main.py
app/auth/: jwt_handler.py  oauth2.py
app/db/: database.py  db.py  db_design.Json  db_design2.json  design.json
app/models/: schemas.py
app/routers/: auth.py  core.py  dashboard.py  history.py  user.py
app/settings/: config.py
app/utils/: utils.py
tests/: auth.test.py
